@@ -1,3 +1,9 @@
+2009-12-07  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclBasic.c: arrange for [tailcall] to be created with
+	the other builtins: was being created in a separate call, leftover
+	from pre-tip days.
+
 2009-12-07  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclStrToD.c:  Correct conditional compile directives to
